@@ -10,4 +10,12 @@ PACKAGE_BINFLAGS = -lCintex -lReflex
 PACKAGE_DEP      = SusyNtuple MultiLep 
 PACKAGE_NOOPT    = 0
 
+# PDFTool switch, set this variable to allow pdf reweighting of 7TeV to 8TeV
+# Corresponding switch in MultiLep package must also be set
+USEPDFTOOL       =
+
+ifneq ($(USEPDFTOOL),)
+    PACKAGE_CXXFLAGS += -DUSEPDFTOOL
+endif
+
 include $(ROOTCOREDIR)/Makefile-common
